After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 589064 - resindvd doesn't behave right for "previous chapter"
resindvd doesn't behave right for "previous chapter"
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 0.10.23
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks: 515109
 
 
Reported: 2009-07-19 22:57 UTC by Bastien Nocera
Modified: 2011-11-07 18:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
resindvdsrc: do not try to seek before the first chapter (1.19 KB, patch)
2011-10-20 09:43 UTC, Vincent Penquerc'h
committed Details | Review

Description Bastien Nocera 2009-07-19 22:57:44 UTC
+++ This bug was initially created as a clone of Bug #515109 +++

resindvd's handling of previous/next chapter could do with a bit of tweaking. Currently, pressing "next" on the last chapter of a DVD will bring it back to the menu (do we get an EOS if there's no menu on the DVD, or does it restart the movie?).

Pressing "previous" on the first chapter causes errors to be printed out, when it should seek back to the start of the chapter:
(totem:13573): GStreamer-CRITICAL **: gst_event_new_new_segment_full: assertion `start != -1' failed

(totem:13573): GStreamer-CRITICAL **: gst_event_new_new_segment_full: assertion `start != -1' failed

(totem:13573): GStreamer-WARNING **: closing segment of unknown duration, assuming duration of 0
libdvdnav: previous chapter failed.
Comment 1 Vincent Penquerc'h 2011-10-20 09:43:47 UTC
Created attachment 199510 [details] [review]
resindvdsrc: do not try to seek before the first chapter
Comment 2 Vincent Penquerc'h 2011-11-07 11:56:45 UTC
commit cabc01f107b4f63b25e1ade631037f6748966f00
Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk>
Date:   Thu Oct 20 10:42:42 2011 +0100

    resindvdsrc: do not try to seek before the first chapter
    
    https://bugzilla.gnome.org/show_bug.cgi?id=589064