resindvdsrc: do not try to seek before the first chapter

https://bugzilla.gnome.org/show_bug.cgi?id=589064